--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "rollup --config rollup.config.mjs",
     "prepublish": "yarn build",
     "lint": "eslint --fix 'src/**'",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "deploy-storybook": "storybook-to-ghpages"
   },
   "main": "dist/cjs/index.js",
@@ -51,7 +51,10 @@
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-typescript": "^11.1.0",
     "@storybook/addon-essentials": "^7.0.0",
+    "@storybook/addon-mdx-gfm": "^7.0.0",
+    "@storybook/cli": "^7.0.7",
     "@storybook/react": "^7.0.0",
+    "@storybook/react-webpack5": "^7.0.0",
     "@storybook/storybook-deployer": "^2.8.10",
     "@types/react": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
@@ -64,6 +67,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-storybook": "^0.6.11",
     "lint-staged": "^10.3.0",
     "prettier": "^2.1.1",
     "react": "^18.2.0",
@@ -74,6 +78,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-web-worker-loader": "^1.6.1",
     "source-map-explorer": "^2.5.0",
+    "storybook": "^7.0.7",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2"
   },
