--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "3.0.0-beta-1",
   "description": "A React Component for reading QR codes from the webcam",
   "scripts": {
-    "build": "rollup --config rollup.config.mjs",
+    "build": "rollup --config rollup.config.js",
     "prepublish": "yarn build",
     "lint": "eslint --fix 'src/**'",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "deploy-storybook": "storybook-to-ghpages"
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
   "type": "module",
+  "files": [
+    "dist",
+    "types"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/react-qr-reader/react-qr-reader.git"
@@ -26,18 +29,13 @@
   ],
   "author": "thomas billiet",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/react-qr-reader/react-qr-reader/issues"
-  },
-  "homepage": "https://github.com/react-qr-reader/react-qr-reader#readme",
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "dependencies": {
     "@zxing/browser": "^0.1.3",
-    "@zxing/library": "^0.20.0",
-    "rollup": "^3.21.3"
+    "@zxing/library": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.0",
@@ -73,9 +71,11 @@
     "react": "^18.2.0",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^18.2.0",
+    "rollup": "^3.21.3",
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.34.1",
     "rollup-plugin-web-worker-loader": "^1.6.1",
     "source-map-explorer": "^2.5.0",
     "storybook": "^7.0.7",
