--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,16 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDirs": ["src"],
-    "baseUrl": "src",
-    "module": "commonjs",
-    "target": "es5",
-    "lib": ["es5", "es6", "es7", "es2017", "dom"],
-    "sourceMap": true,
-    "allowJs": false,
-    "jsx": "react",
+    "target": "ES2022",
+    "jsx": "react-jsx",
+    "module": "ES6",
     "moduleResolution": "node",
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": false,
-    "noImplicitThis": false,
-    "noImplicitAny": false,
-    "strictNullChecks": false,
-    "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": false,
+    "resolveJsonModule": true,
     "declaration": true,
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "outDir": "./types",
+    "noEmit": true,
     "esModuleInterop": true,
-    "declarationDir": "types",
-    "emitDeclarationOnly": true
-  },
-  "include": ["src/**/*", "old.js"],
-  "exclude": ["node_modules"]
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true
+  }
 }
