Update renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,21 @@
   "packageRules": [
     {
       "matchUpdateTypes": ["patch", "minor"],
+      "matchPackagePatterns": ["^@storybook", "^storybook"],
+      "groupName": "storybook"
+    },
+    {
+      "matchUpdateTypes": ["patch", "minor"],
+      "matchPackagePatterns": "^rollup",
+      "groupName": "rollup and plugins"
+    },
+    {
+      "matchUpdateTypes": ["patch", "minor"],
+      "matchPackagePatterns": "^eslint",
+      "groupName": "eslint and plugins"
+    },
+    {
+      "matchUpdateTypes": ["patch", "minor"],
       "excludePackageNames": ["typescript"],
       "groupName": "minor and patch dependencies"
     }
