--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@memenashi/react-qr-reader",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A React Component for reading QR codes from the webcam",
   "scripts": {
     "build": "rollup --config rollup.config.js",
@@ -30,7 +30,8 @@
   },
   "dependencies": {
     "@zxing/browser": "^0.1.3",
-    "@zxing/library": "^0.20.0"
+    "@zxing/library": "^0.20.0",
+    "rollup-plugin-copy": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
