--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@memenashi/react-qr-reader",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A React Component for reading QR codes from the webcam",
   "scripts": {
     "build": "rollup --config rollup.config.js",
+    "prettier:fix":"prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "storybook": "storybook dev -p 6006"
   },
   "main": "dist/index.js",
@@ -30,8 +31,7 @@
   },
   "dependencies": {
     "@zxing/browser": "^0.1.3",
-    "@zxing/library": "^0.20.0",
-    "rollup-plugin-copy": "^3.4.0"
+    "@zxing/library": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
@@ -67,6 +67,8 @@
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^18.2.0",
     "rollup": "^3.23.0",
+    "rollup-plugin-cleaner": "^1.0.0",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
