--- a/.github/workflows/publish_storybook.yml
+++ b/.github/workflows/publish_storybook.yml
@@ -15,5 +15,9 @@ jobs:
             node-version: '18.x'
             cache: 'yarn'
         - run: yarn install --frozen-lockfile;
-        - run: yarn deploy
-        
+        - name: Deploy
+          uses: peaceiris/actions-gh-pages@v3
+          if: ${{ github.ref == 'refs/heads/main' }}
+          with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            publish_dir: ./storybook-static
