--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "rollup-plugin-web-worker-loader": "^1.6.1",
     "source-map-explorer": "^2.5.3",
     "storybook": "^7.0.27",
+    "strip-ansi": "^7.1.0",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2"
   }
