--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-typescript": "^11.1.4",
+    "@storybook/addon-actions": "^7.4.5",
     "@storybook/addon-essentials": "^7.4.5",
     "@storybook/addon-mdx-gfm": "^7.4.5",
     "@storybook/cli": "^7.4.5",
@@ -91,5 +92,6 @@
     "strip-ansi": "^6.0.0",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2"
-  }
+  },
+  "packageManager": "yarn@3.6.3"
 }
