--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -26,5 +26,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn install --frozen-lockfile
       - run: yarn prettier
-      # - run: yarn eslint
+      - run: yarn eslint
       - run: yarn build
+      - run: yarn predeploy
